--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 		<div class="options-box">
 			<h1>Locations</h1>
 			<div>
-				<input id="filter-text" type="text" onkeydown="showAll()" placeholder="EX: Park Ave">
+				<input id="filter-text" type="text" onkeydown="showAll()" data-bind="textInput: filterLocation">
 				<input id="filter" type="button" value="Filter">
 				<br>
 				<ul data-bind="foreach:Locations">
-					<li>
-						<span data-bind="text:name, attr: {'id': 'location'+($index()+1), visible:appear}"></span>
-					</li>
+					<li data-bind="text:name, attr: {'id': 'location'+($index()+1)}"></li>
 				</ul>
 			</div>
 			<hr>
@@ -29,31 +27,30 @@
 			</div>
 			<hr>
 			<div>
-				<input id= "zoom-to-area-text" type="text" placeholder="Enter your favorite area!">
+				<input id= "zoom-to-area-text" type="text" data-bind="textInput: zoomArea">
 				<input id= "zoom-to-area" type="button" value="Zoom">
 			</div>
 			<hr>
 			<div>
 				<span class="text"> Within </span>
-				<select id="max-duration">
-					<option value="10"> 10 min</option>
-					<option value="15"> 15 min</option>
-					<option value="30"> 30 min</option>
-					<option value="60"> 1 hour</option>
+				<select data-bind="options: Time,
+								   attr: {'id':'max-duration'},
+								   value: choosedTime,
+								   valueAllowUnset: true">
 				</select>
-				<select id="mode">
-					<option value="DRIVING">drive</option>
-					<option value="WALKING">walk</option>
-					<option value="BICYCLING">bike</option>
-					<option value="TRANSIT">transit ride</option>
+				<span class="text"> Min </span>
+				<select data-bind="options: Ways,
+								   attr: {'id':'mode'},
+								   value: choosedWay,
+								   valueAllowUnset: true">
 				</select>
 				<span class="text">of</span>
-				<input id="search-within-time-text" type="text" placeholder="Ex: Google Office NYC or 75 9th Ave, New York, NY">
+				<input id="search-within-time-text" type="text" data-bind="textInput: viewRoute">
 				<input id= "search-within-time" type="button" value="Go">
 			</div>
 			<div>
 				<span class="text">Search for nearby places</span>
-				<input id= "places-search" type="text" placeholder="Ex: Pizza delivery in NYC">
+				<input id= "places-search" type="text" data-bind="textInput: searchPlace">
 				<input id="go-places" type="button" value="Go">
 				<br>
 				<br>
